[tool.poetry]
name = "mastools"
version = "0.2.0"
description = "Tools for interacting directly with a Mastodon instance's database"
authors = ["Kirk Strauser <kirk@strauser.com>"]
license = "MIT"
homepage = "https://github.com/freeradical-dot-zone/mastools"
readme = "README.md"

[tool.poetry.dependencies]
psycopg2 = "^2.8"
python = "^3.6"
sqlalchemy = "^1.3"

[tool.poetry.dev-dependencies]
black = {version = "=19.3b0", allows-prereleases = true}
flake8 = "^3.7"
mypy = "^0.720.0"
pylint = "^2.4"
sqlalchemy-stubs = "^0.2.0"

[tool.poetry.scripts]
mastools = "mastools.scripts.cmd_mastools:handle_command_line"
show-user-changes = "mastools.scripts.show_user_changes:handle_command_line"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
