[tool.poetry]
name = "mastools"
version = "0.2.0"
description = "Tools for interacting directly with a Mastodon instance's database"
authors = ["Kirk Strauser <kirk@strauser.com>"]
license = "MIT"
homepage = "https://github.com/freeradical-dot-zone/mastools"
readme = "README.md"

[tool.poetry.dependencies]
psycopg2 = "^2.8"
python = "^3.10"
sqlalchemy = "^1.3"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
mypy = "*"
pylint = "*"
sqlalchemy-stubs = "*"

[tool.poetry.scripts]
mastools = "mastools.scripts.cmd_mastools:handle_command_line"
show-user-changes = "mastools.scripts.show_user_changes:handle_command_line"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
