[project]
name = "mastools"
version = "0.2.0"
description = "Tools for interacting directly with a Mastodon instance's database"
authors = [{ name = "Kirk Strauser", email = "kirk@strauser.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["psycopg2>=2.9.11", "sqlalchemy>=2.0.44"]

[project.scripts]
mastools = "mastools.scripts.cmd_mastools:handle_command_line"
show-user-changes = "mastools.scripts.user_changes:handle_command_line"

[project.urls]
Homepage = "https://github.com/freeradical-dot-zone/mastools"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["mypy>=1.18.2", "ruff>=0.14.4"]
